actualizar librerias y agregar session name